--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,19 +63,19 @@ dependencies {
     //Coroutines
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
+
 //Lifecycle Components
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation "androidx.lifecycle:lifecycle-common-java8:2.2.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+
 //Annotation processor
     kapt "androidx.lifecycle:lifecycle-compiler:2.2.0"
-//Room
+
+//RoomDb
     implementation "androidx.room:room-runtime:2.6.1"
     kapt "androidx.room:room-compiler:2.6.1"
     implementation "androidx.room:room-ktx:2.6.1"
-
-//    paging
-    implementation "androidx.paging:paging-runtime-ktx:3.2.1"
 
 }
